cluster/apps/goldilocks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks
  namespace: goldilocks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: traefik
    hajimari.io/enable: 'true'
    hajimari.io/icon: web
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - goldilocks.${SECRET_DOMAIN}
      secretName: goldilocks-tls
  rules:
    - host: goldilocks.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
